--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '2.0.1'
 }
 
-def versionObj = new Version(major: 1, minor: 1, revision: 0)
+def versionObj = new Version(major: 1, minor: 2, revision: 0)
 
 group 'com.github.natanbc'
 version "${versionObj}"
@@ -34,6 +34,11 @@ dependencies {
 task sourcesForRelease(type: Copy) {
     from 'src/main/java'
     into 'build/filteredSrc'
+    filter(ReplaceTokens, tokens: [
+            VERSION_MAJOR: versionObj.getMajor(),
+            VERSION_MINOR: versionObj.getMinor(),
+            VERSION_REVISION: versionObj.getRevision(),
+    ])
 }
 
 compileJava {
