--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
+import org.apache.tools.ant.filters.ReplaceTokens
+
 task sourcesForRelease(type: Copy) {
     from 'src/main/java'
     into 'build/filteredSrc'
