fix javadoc, make it html5

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,17 @@ shadowJar {
     classifier = "withDependencies"
 }
 
+javadoc {
+    def dir = new File(System.getenv("JAVA_HOME"), "bin")
+    def file = new File(dir, "javadoc")
+    if(!file.isFile()) file = new File(dir, "javadoc.exe")
+    if(file.isFile()) {
+        executable = file.getAbsolutePath()
+        options.addBooleanOption('html5', true)
+    }
+    options.addStringOption("tag", "implNote:a:Implementation Note:")
+}
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from "${buildDir}/filteredSrc"
